# procedures

./: .gitignore  Cargo.toml
examples/: capture_only.cobra  capture_recurse.cobra  countdown.cobra  loop.cobra  loop_acc.cobra  manual_local_capture.cobra  mutual_capture.cobra  nested.cobra  own_param.cobra  param_and_cap.cobra  two_params.cobra
runtime/: stub.rs
src/: backend.rs  frontend.rs  main.rs  middle_end.rs  parser.rs  runner.rs  ssa.rs
tests/: examples.rs
