[package]
name = "cobra"
version = "0.1.0"
edition = "2024"
default-run = "snake"

[[bin]]
name = "snake"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.24"
lalrpop-util = { version = "0.22", features = [ "lexer" ] }
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
im = "15.1"
